Fix regions map overlap

--- a/core/sass/atlas/pages/_landing-page.scss
+++ b/core/sass/atlas/pages/_landing-page.scss
@@ -116,7 +116,7 @@
   }
 
   @media (min-width: $breakpoint-large) {
-    margin-top: -198px;
-    margin-bottom: -180px;
+    margin-top: -170px;
+    margin-bottom: -90px;
   }
 }
